<resources>
    <string name="app_name">MyPetDiary</string>

    <string name="kakao_app_key">de5eba9c8af3f6ce607134a114f9f316</string>

    <string name="cancel">취소</string>

    <string-array name="arr_user_area">
        <item>서울</item>
        <item>경기</item>
        <item>인천</item>
        <item>강원</item>
        <item>대전</item>
        <item>세종</item>
        <item>충남</item>
        <item>충북</item>
        <item>부산</item>
        <item>울산</item>
        <item>경남</item>
        <item>경북</item>
        <item>대구</item>
        <item>광주</item>
        <item>전남</item>
        <item>전북</item>
        <item>제주</item>
    </string-array>

    <string-array name="arr_pet_kind">
        <item>강아지</item>
        <item>거북이</item>
        <item>고양이</item>
        <item>기니피그</item>
        <item>물고기</item>
        <item>새</item>
        <item>토끼</item>
        <item>햄스터</item>
        <item>기타</item>
    </string-array>

    <string name="name">이름</string>
    <string name="birth">생일</string>
    <string name="pet_come">가족된 날</string>
    <string name="pet_kind">종류</string>

</resources>
